fixe text flowing out of container in login on rightsidebar

--- a/public/assets/css/modern-business.css
+++ b/public/assets/css/modern-business.css
@@ -21,12 +21,17 @@ body {
     padding-top: 50px;
     /* Required padding for .navbar-fixed-top. Remove if using .navbar-static-top. Change if height of navigation changes. */
 }
+div{
+    word-wrap: break-word;
+}
 h2{
   padding: 10px;
+  word-wrap: break-word;
 }
 h1{
     padding: 20px;
     text-align: center;
+    word-wrap: break-word;
 }
 
 .img-portfolio {
